# ripenv

./: .gitignore  README.md  TODO.md
.claude/: settings.json
crates/ripenv/: Cargo.toml  pyproject.toml
crates/ripenv/src/: cli.rs  lib.rs  printer.rs
crates/ripenv/src/commands/: install.rs  lock.rs  mod.rs  run.rs  sync.rs  uninstall.rs  update.rs  uv_runner.rs
crates/ripenv/src/pipfile/: bridge.rs  discovery.rs  lockfile.rs  mod.rs  model.rs  writer.rs
crates/ripenv/tests/fixtures/complex-specs/: Pipfile
crates/ripenv/tests/fixtures/multiple-sources/: Pipfile
crates/ripenv/tests/fixtures/vcs-and-editable/: Pipfile
crates/ripenv/tests/fixtures/with-dev-deps/: Pipfile
crates/ripenv/tests/fixtures/with-scripts/: Pipfile
crates/ripenv/tests/it/: help.rs  install.rs  lockfile.rs  main.rs  parity.rs  pipfile_parse.rs  verbosity.rs  version.rs
crates/ripenv/tests/it/common/: mod.rs
crates/uv-resolver/src/lock/: mod.rs
crates/uv/src/: lib.rs  printer.rs  settings.rs
crates/uv/src/commands/: mod.rs
crates/uv/src/commands/pip/: mod.rs  operations.rs
crates/uv/src/commands/project/: lock.rs  mod.rs  run.rs  sync.rs
scripts/benchmark-ripenv/: pyproject.toml  run-benchmarks.sh
scripts/benchmark-ripenv/src/benchmark_ripenv/: __init__.py  bench.py  pipenv_suite.py  plot.py  ripenv_suite.py  uv_suite.py
scripts/benchmark-ripenv/src/benchmark_ripenv/fixtures/flask/: Pipfile
scripts/benchmark-ripenv/src/benchmark_ripenv/fixtures/jupyter/: Pipfile
scripts/benchmark-ripenv/src/benchmark_ripenv/fixtures/science/: Pipfile
scripts/benchmark-ripenv/src/benchmark_ripenv/fixtures/trio/: Pipfile
