[package]
name = "ripenv"
version = "0.1.0"
description = "A pipenv-compatible CLI powered by uv"
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
default-run = "ripenv"

[lints]
workspace = true

[dependencies]
anstream = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive", "string", "wrap_help"] }
fs-err = { workspace = true }
owo-colors = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }

uv = { path = "../uv" }
uv-cache = { workspace = true }
uv-cli = { workspace = true }
uv-client = { workspace = true }
uv-configuration = { workspace = true }
uv-normalize = { workspace = true }
uv-preview = { workspace = true }
uv-python = { workspace = true }
uv-resolver = { workspace = true }
uv-settings = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
regex = { workspace = true }
tempfile = { workspace = true }

[features]
default = []
